tests/paczka1/small_fuzzy/70681831.err
Error in line 2: A352 A352 56,6
Error in line 11: EANM S774 88,4
